# mythos-vantara

./: .env  .env.example  .gitignore  .mcp.json  AGENTS.md  ALFRED_PATTERN_EXTRACTION.md  ARCHITECTURE.md  BACKEND_SQL.sql  CLAUDE.md  DEPLOYMENT.md  MAVIS_SHARD_VANTARA_LOVABLE_v1.0.md  MAVIS_VS_FELIX_GAP.md  OPENCLAW_INTEGRATION_REPORT.md  SHARD.md  capacitor.config.ts  gemini.md  index (2).html  index.html  journal.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.agents/: README.md
.claude/skills/: aeo.md  agent-self-scheduling.md  agentsmesh.md  analyze.md  character-animation.md  clone-website.md  deepapi.md  draft.md  (+49 more)
Team/: ROSTER.md
bridge/: README.md  bridge_config.json.example  mavis_bridge.py  requirements.txt
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  settings.html  settings.js
browser-server/: Dockerfile  README.md  package.json  server.js
context/: api-catalog.md  soul.md  user.md
docs/: ACTIVATE_MAVIS_CRON.sql
extension/: background.js  content.js  manifest.json  popup.html  popup.js
public/: manifest.json  sw.js
sandbox/: Dockerfile  README.md  server.py
scripts/: apply-pending-migrations.sql  deploy.sh  set-secrets.sh  smoke-test.mjs
server/: vantara-local.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
supabase/: config.toml
templates/: CLAUDE-template.md  plan-brief.md  plan-campaign.md  plan-quick.md
whisper-server/: Dockerfile  README.md  server.py
(+1108 files in other folders)
